minor cosmetic changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
             <tbody>
                 {% for result in results %}
                     <tr>
-                        <td>{{ loop.index }}</td>
+                        <td><strong>{{ loop.index }}.</strong></td>
                         <td>{{ result['firstname'] }}</td>
                         <td>{{ result['lastname'] }}</td>
                         <td>{{ result['email'] }}</td>
