--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <div class="container mt-5">
         <div class="row">
             <div class="col-4 offset-4">
-                <h1 class="text-center">Clients Table</h1>
+                <h1 class="text-center">Clients</h1>
             </div>
             <div class="col-2">
                 <select name="country" id="country" class="form-control">
